--- a/install
+++ b/install
@@ -17,7 +17,7 @@ done
 # Pre-install tests
 function do_preflight () {
   echo 'Doing preflight tests...'
-  manifest=(~/bin/dotfiles ~/.bashrc ~/.bash_profile ~/bin/vcprompt)
+  manifest=(~/.bashrc ~/.bash_profile ~/bin/vcprompt)
   for file in ${manifest[@]}
   do
     if [[ -e $file ]]; then
