--- a/install
+++ b/install
@@ -1,11 +1,10 @@
 #!/bin/bash
 # Arko's dotfiles install script
 
-# Use this script to install or uninstall the dotfiles either locally (default) or remotely to the given user and host.
+# Use this script to install or uninstall the dotfiles
 
 # Synopsis
 # install [-f | -u]
-# install -R [user@]host [-f | -u]
 
 install_mode='install' # Default install mode
 
@@ -14,7 +13,6 @@ function show_usage () {
   echo
   echo "    -f              Force install by backuping old files first"
   echo "    -h              Show this help"
-  echo "    -R [user@]host  Do a remote install or uninstall"
   echo "    -u              Uninstall (backup) all files"
 }
 
@@ -23,7 +21,6 @@ do
   case $Option in
     f ) force_install=1;;
     h ) show_usage; exit 0;;
-    R ) remote_host=$OPTARG;;
     u ) install_mode='uninstall';;
     * ) show_usage; exit 1;;
   esac
@@ -165,12 +162,6 @@ function do_local_install () {
   echo "You may also want to change prompt's color with: $ prompt_color"
 }
 
-function do_remote_install () {
-  # TODO: copy files to remote host
-  # TODO: run install script remotely (Should pass local prefilght in all cases)
-  # TODO: See how we can make it with SSH Control Master
-  echo "Not implemented yet"
-}
 
 function do_local_uninstall () {
   echo "Uninstalling"
@@ -178,7 +169,6 @@ function do_local_uninstall () {
   echo "`tput bold`Dotfiles were successfully uninstalled!`tput sgr0`"
   echo "Backup directories were left untouched (~/.dotfiles_backup_...)"
 }
-
 
 function exit_with_error () {
   echo $1
@@ -190,33 +180,19 @@ function exit_with_error () {
 
 case $install_mode in
   'install' )
-    if [[ $remote_host ]]; then
-      # Remote install
-      # if [[ $force_install -eq 1 ]]; then
-      #   TODO: do_remote_backup
-      # fi
-      # TODO: do_remote_prefilght
-      do_remote_install
-    else
-      # Local install
-      if [[ $force_install -eq 1 ]]; then
-        echo "Force install, backuping first"
-        do_local_backup
-      fi
-      do_local_preflight
-      if [[ $? -eq 0 ]]; then
-        do_local_install
-      fi
+    # Local install
+    if [[ $force_install -eq 1 ]]; then
+      echo "Force install, backuping first"
+      do_local_backup
+    fi
+    do_local_preflight
+    if [[ $? -eq 0 ]]; then
+      do_local_install
     fi
   ;;
   'uninstall' )
-    if [[ $remote_host ]]; then
-      # Remote uninstall
-      do_remote_backup
-    else
-      # Local uninstall
-      do_local_uninstall
-    fi
+    # Local uninstall
+    do_local_uninstall
   ;;
 esac
 
